Agregue suscripcion , cambie la cabecera y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">Tu blog de
-                    confianza</span>
+                    Maestro</span>
             </div>         
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante
@@ -26,6 +26,9 @@
                     un rockstar. Pero
                     estadisticamente no lo
                     eres... por ahora.
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>    
             </div>
         </div>
