--- a/blogpost.html
+++ b/blogpost.html
@@ -12,11 +12,11 @@
                     cabecera</span>
             </div>         
             <div id="post">
-                <h1>Este es el titulo atractivo e interesante
+                <h1>Este es el título atractivo e interesante
                     del post</h1>
-                <p>y este es el parrafo de inicio
+                <p>y este es el párrafo de inicio
                     donde vamos a explicar
-                    las cosas increibles que se
+                    las cosas increíbles que se
                     pueden hacer con ramas</p>
                 <p>Los Blogs son la mejor
                     forma de compartir
