agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
                     donde vamos a explicar
                     las cosas increíbles que se
                     pueden hacer con ramas</p>
+                <p> <img id="foto1" src="imagenes/band.jpg" width="15%" alt=""></p>
                 <p>Los Blogs son la mejor
                     forma de compartir
                     información y tus ideas.
